Added starters / thing

--- a/ml/index.html
+++ b/ml/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ixfx / machine learn</title>
+  <title>ixfx / machine learning</title>
   <link rel="stylesheet" href="../demos.css">
 </head>
 
@@ -12,7 +12,7 @@
 
   <main>
     <header>
-      <a href="../../">../</a> machine learning
+      <a href="../">../</a> machine learning
     </header>
     <section>
       <p>TensorFlow.js for computer vision.</p>
