--- a/modulation/env-osc/index.html
+++ b/modulation/env-osc/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>thing</title>
+  <title>env-osc</title>
 </head>
 
 <body>
@@ -20,8 +20,8 @@
     :root {
       --hue: 200;
       --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-      --bg: hsl(var(--hue), 10%, 80%);
-      --fg: hsl(var(--hue), 100%, 30%);
+      --bg: hsl(var(--hue), 10%, 10%);
+      --fg: hsl(var(--hue), 100%, 90%);
     }
 
     body {
@@ -31,13 +31,14 @@
       user-select: none;
       -webkit-user-select: none;
       overscroll-behavior: none;
+      overflow: hidden;
     }
 
     #thing {
       position: absolute;
-      border: 2px solid black;
-      width: 1em;
-      height: 1em;
+      width: 2em;
+      height: 2em;
+      border-radius: 50%;
       left: 0;
       top: 0;
       background-color: var(--fg);
