--- a/io/index.html
+++ b/io/index.html
@@ -90,12 +90,17 @@
             <div class="techniques">moving average, normalising, variable fonts</div>
           </li>
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/force"></a>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/force/"></a>
             <a href="./pointer/force/">force</a>: Trackpad/stylus pressure
           </li>
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/visualise"></a>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/visualise/"></a>
             <a href="./pointer/visualise/">visualiser</a>: for debug purposes, show pointer movements
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/move/"></a>
+            <a href="./pointer/move/">move</a>: Based on the 'thing' model, a shape grows with pointer movement, and
+            otherwise shrinks on its own accord.
           </li>
         </ul>
         <h2>playgrounds</h2>
