led-pwm-env fix

--- a/io/espruino/led-pwm-env/index.html
+++ b/io/espruino/led-pwm-env/index.html
@@ -42,6 +42,7 @@
 <body>
   <section>
     <h1>espruino / led-pwm-env </h1>
+    <p>Press any key to trigger envelope.</p>
     <div id="preamble">
       <button id="btnConnect">Connect</button>
     </div>
