--- a/io/index.html
+++ b/io/index.html
@@ -37,6 +37,10 @@
             <a href="./espruino/led/">led</a>: Control the three on-board LEDs (Puck.js)
           </li>
           <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/led"></a>
+            <a href="./espruino/led-pwm-env/">led-pwm-env</a>: Fade an LED in and out using an envelope
+          </li>
+          <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/accel-gyro"></a>
             <a href="./espruino/accel-gyro/">accel-gyro</a>: use acceleration and gyroscope sensor readings (Puck.js)
           </li>
@@ -73,6 +77,7 @@
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/arduino/led-pwm"></a>
             <a href="./arduino/led-pwm/">led-pwm</a>: control a LED
           </li>
+
         </ul>
 
       </div>
