--- a/starters/index.html
+++ b/starters/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <main class="fullHeight">
+  <main>
     <header>
       <a href="../">../</a> starters
     </header>
@@ -39,6 +39,10 @@
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/oscillator-starter"></a>
             <a href="../modulation/oscillator-starter/">oscillator</a>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starters/thing"></a>
+            <a href="thing/">thing</a>: shows the thing pattern (nothing to see without adding your own code)
           </li>
         </ul>
       </div>
