--- a/starters/thing/index.html
+++ b/starters/thing/index.html
@@ -43,7 +43,7 @@
   <section>
     <h1>thing</h1>
     <div id="thing"></div>
-    <script type="module" src="thing.js"></script>
+    <script type="module" src="script.js"></script>
   </section>
 </body>
 
