--- a/modulation/env-osc/index.html
+++ b/modulation/env-osc/index.html
@@ -47,6 +47,7 @@
   </style>
   <section>
     <h1>thing</h1>
+    <p>Tap to trigger envelope</p>
     <div id="thing"></div>
     <script type="module" src="script.js"></script>
   </section>
