--- a/modulation/index.html
+++ b/modulation/index.html
@@ -18,6 +18,10 @@
       <li><a class="pill" href="https://clinth.github.io/ixfx-docs/modulation/envelope/">Documentation</a></li>
       <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Modulation.html">API Reference</a></li>
     </ul>
+    <p>
+      The <a href="https://clinth.github.io/fn-vis/">function visualiser</a> can be helpful when playing with
+      modulation.
+    </p>
     <div class="demos">
       <div>
         <h1>envelope</h1>
@@ -26,7 +30,10 @@
           <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Modulation.html#adsr">API Reference</a></li>
         </ul>
         <ul class="nobullets">
-          <li><a href="./env-decay/">decay</a>: Using an envelope to gradually reduce a value</li>
+          <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/env-decay"></a> <a
+              href="./env-decay/">decay</a>: Using an envelope to gradually reduce a value</li>
+          <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/env-osc"></a> <a
+              href="./env-osc/">env-osc</a>: Cross-modulate an envelope and oscillator</li>
         </ul>
       </div>
       <div>
@@ -37,8 +44,10 @@
           </li>
         </ul>
         <ul class="nobullets">
-          <li><a href="./easing-tick/">tick</a>: Easing over <em>ticks</em></li>
-          <li><a href="./easing-timer/">timer</a>: Easing over time </li>
+          <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/easing-tick"></a> <a
+              href="./easing-tick/">tick</a>: Easing over <em>ticks</em></li>
+          <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/easing-timer"></a> <a
+              href="./easing-timer/">timer</a>: Easing over time </li>
         </ul>
       </div>
       <div>
@@ -49,8 +58,10 @@
           </li>
         </ul>
         <ul class="nobullets">
-          <li><a href="./oscillator-spring/">spring</a>: Spring physics</li>
-          <li><a href="./oscillator-starter/">starter</a>: Empty sketch to get you going</li>
+          <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/oscillator-spring"></a>
+            <a href="./oscillator-spring/">spring</a>: Spring physics</li>
+          <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/oscillator-starter"></a>
+            <a href="./oscillator-starter/">starter</a>: Empty sketch to get you going</li>
         </ul>
       </div>
       <div>
