pointers/drag demo

--- a/io/index.html
+++ b/io/index.html
@@ -107,6 +107,11 @@
             <a href="./pointer/move/">move</a>: Based on the 'thing' model, a shape grows with pointer movement, and
             otherwise shrinks on its own accord.
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/drag/"></a>
+            <a href="./pointer/drag/">drag</a>: Based on the 'thing' model, elements are draggable, and build up an
+            'agitation' the more they are moved.
+          </li>
         </ul>
         <h2>playgrounds</h2>
         <ul class="nobullets">
