--- a/starters/index.html
+++ b/starters/index.html
@@ -20,7 +20,7 @@
         <p>Sketches that have some plumbing already set up, but don't do anything themselves. Good to use as a starting
           point for your own exploration.</p>
       </div>
-      <div>
+      <div class="demos">
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starter/canvas"></a>
