--- a/ml/face/single.html
+++ b/ml/face/single.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>pose / single</title>
 </head>
+<link rel="stylesheet" href="../base.css">
+
 <style>
   :root {
     --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -29,22 +31,6 @@
     padding: 1em;
   }
 
-  #sourceSection {
-    max-width: 320px;
-    max-height: 240px;
-    aspect-ratio: 320 / 240;
-    height: 30vw;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  #sourceSection iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-  }
-
   #intro {
     max-width: 15em;
   }
@@ -63,8 +49,9 @@
     </div>
     <!-- If you're not using the panel, comment-out these lines... -->
     <button id="btnCloseFrame">Close corner source</button>
-    <section id="sourceSection">
-      <iframe src="source.html"></iframe>
+    <section class="m" id="sourceSection">
+      <nav>Source</nav>
+      <iframe src="source.html?view=min"></iframe>
     </section>
     <!-- ----  -->
 
