--- a/ml/object/objects.html
+++ b/ml/object/objects.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>object / objects</title>
 </head>
+<link rel="stylesheet" href="../base.css">
 <style>
   :root {
     --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -29,22 +30,6 @@
     padding: 1em;
   }
 
-  #sourceSection {
-    max-width: 320px;
-    max-height: 240px;
-    aspect-ratio: 320 / 240;
-    height: 30vw;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  #sourceSection iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-  }
-
   #intro {
     max-width: 15em;
   }
@@ -57,8 +42,9 @@
     <p id="intro"> <a href="source.html" target="_blank">Start a source in a new
         window</a>, or click the yellow checkmark in the corner panel.</p>
     </div>
-    <section id="sourceSection">
-      <iframe src="source.html"></iframe>
+    <section class="m" id="sourceSection">
+      <nav>Source</nav>
+      <iframe src="source.html?view=min"></iframe>
     </section>
     <script type="module" src="objects.js"></script>
     <canvas id="canvas"></canvas>
