Added modulation/easing-set and env-set demos

--- a/modulation/index.html
+++ b/modulation/index.html
@@ -32,8 +32,10 @@
         <ul class="nobullets">
           <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/env-decay"></a> <a
               href="./env-decay/">decay</a>: Using an envelope to gradually reduce a value</li>
+          <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/env-set"></a> <a
+              href="./env-set/">set</a>: Use an envelope to reach a target value</li>
           <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/env-osc"></a> <a
-              href="./env-osc/">env-osc</a>: Cross-modulate an envelope and oscillator</li>
+              href="./env-osc/">osc</a>: Cross-modulate an envelope and oscillator</li>
         </ul>
       </div>
       <div>
@@ -48,6 +50,8 @@
               href="./easing-tick/">tick</a>: Easing over <em>ticks</em></li>
           <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/easing-timer"></a> <a
               href="./easing-timer/">timer</a>: Easing over time </li>
+          <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/easing-set"></a> <a
+              href="./easing-set/">set</a>: Use an easing function to reach a target value</li>
         </ul>
       </div>
       <div>
@@ -59,9 +63,11 @@
         </ul>
         <ul class="nobullets">
           <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/oscillator-spring"></a>
-            <a href="./oscillator-spring/">spring</a>: Spring physics</li>
+            <a href="./oscillator-spring/">spring</a>: Spring physics
+          </li>
           <li><a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/oscillator-starter"></a>
-            <a href="./oscillator-starter/">starter</a>: Empty sketch to get you going</li>
+            <a href="./oscillator-starter/">starter</a>: Empty sketch to get you going
+          </li>
         </ul>
       </div>
       <div>
