--- a/playgrounds/io/force/index.html
+++ b/playgrounds/io/force/index.html
@@ -50,7 +50,8 @@
   </style>
   <header>
     <h1>force playground</h1>
-    <p>With an Apple trackpad or pressure-sensitive stylus, try applying varying force in the square below.</p>
+    <p>With an Apple trackpad (and in Safari browser) or pressure-sensitive stylus, try applying varying force in the
+      square below.</p>
     <div>
       Webkit force: <span id="webkitForce">?</span>
     </div>
