--- a/modulation/easing-set/index.html
+++ b/modulation/easing-set/index.html
@@ -44,6 +44,7 @@
       height: 2em;
       width: 90vw;
       border-radius: 0.4em;
+      cursor: pointer;
       padding: var(--radius);
     }
 
