--- a/modulation/env-set/index.html
+++ b/modulation/env-set/index.html
@@ -39,6 +39,8 @@
       width: 2em;
       border-radius: 0.4em;
       padding: var(--radius);
+      cursor: pointer;
+
     }
 
     #slider>.fill {
