--- a/modulation/oscillator-spring/index.html
+++ b/modulation/oscillator-spring/index.html
@@ -24,11 +24,13 @@
     -webkit-user-select: none;
     font-family: var(--font);
     overscroll-behavior: contain;
+    cursor: crosshair;
 
   }
 
   body {
     font-size: 2vw;
+
   }
 
   #thing {
