--- a/modulation/forces-accel-particles/index.html
+++ b/modulation/forces-accel-particles/index.html
@@ -16,6 +16,10 @@
       --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     }
 
+    html {
+      cursor: grab;
+    }
+
     body {
       color: var(--fg);
       font-family: var(--font);
