--- a/playgrounds/io/espruino-drv2605/index.html
+++ b/playgrounds/io/espruino-drv2605/index.html
@@ -91,8 +91,10 @@
   <section id="preamble">
     <h1>espruino drv2605 playground</h1>
 
-    <p>This only works in Chrome, and assumes a serial-connected Espruino Pico with the haptic module and motor
-      connected. You must also upload the provided <a href="espruino.js">espruino.js</a> sketch to your board first.</p>
+    <p>Important! This only works in Chrome, and assumes a serial-connected Espruino Pico. You must have your board
+      flashed with a provided script and the motor driver hooked up correctly. See the <a
+        href="https://github.com/ClintH/ixfx-demos/blob/main/io/espruino/drv2605/README.md">README</a> for more details.
+    </p>
     <button id="btnConnect">Connect</button>
   </section>
   <section class="disconnected">
