REPL now also supports serial-connected Pico

--- a/playgrounds/io/espruino-repl/index.html
+++ b/playgrounds/io/espruino-repl/index.html
@@ -159,7 +159,10 @@
 
   <header>
     <div class="title">
-      <a href="http://clinth.github.io/ixfx-docs/">ixfx</a> - Espruino REPL
+      <a href="http://clinth.github.io/ixfx-docs/">ixfx</a> - Espruino REPL <select id="board">
+        <option value="puck">Puck (BLE)</option>
+        <option value="pico">Pico (Serial)</option>
+      </select>
     </div>
     <div class="toolbar">
       <button title="Run some demo code" id="btnDemo">Demo</button>
