Espruino analog-in demo

--- a/io/index.html
+++ b/io/index.html
@@ -49,6 +49,10 @@
             <a href="./espruino/temperature/">temperature</a>: use temperature sensor readings (Puck.js)
           </li>
           <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/analog-in"></a>
+            <a href="./espruino/analog-in/">analog input</a>: Read one or more analog inputs (Espruino Pico)
+          </li>
+          <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/drv2605"></a>
             <a href="./espruino/drv2605/">drv2605</a>: haptic motor controller (Espruino Pico).
           </li>
