--- a/io/espruino/analog-in/index.html
+++ b/io/espruino/analog-in/index.html
@@ -46,7 +46,7 @@
       <h1>espruino pico analog-in</h1>
       <button id="btnConnect">Connect</button>
     </div>
-    <div id="controls">
+    <div style="display:none" id="controls">
       <button id="btnRequest">Request data</button>
     </div>
     <div id="data">
