--- a/io/espruino/drv2605/index.html
+++ b/io/espruino/drv2605/index.html
@@ -49,7 +49,6 @@
     border-radius: 1em;
     font-size: 2em;
     transition: all 0.7s;
-
   }
 
   section>div:hover {
@@ -57,16 +56,20 @@
     color: var(--bg);
     transition: all 1s;
   }
+
+  .hidden {
+    display: none;
+  }
 </style>
 
 <body>
-  <div id="preamble">
+  <div id="preamble" class="when-disconnected">
     <h1>espruino drv2605</h1>
     <p>This only works in Chrome, and assumes a serial-connected Espruino Pico with the haptic module and motor
       connected.</p>
     <button id="btnConnect">Connect</button>
   </div>
-  <section id="things" style="display:none">
+  <section id="things" class="when-connected">
     <div id="thingA" data-trigger="ramp down long smooth 1">A</div>
     <div id="thingB" data-trigger="ramp up long smooth 1">B</div>
     <div id="thingC" data-trigger="pulsing sharp 1 100%">C</div>
