audio/oscillator demo

--- a/audio/index.html
+++ b/audio/index.html
@@ -35,6 +35,17 @@
         </ul>
       </div>
       <div>
+        <h1>synthesis</h1>
+        <p></p>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/audio/oscillator"></a>
+            <a href="../audio/oscillator/">oscillator</a>: Control frequency and volume of an oscillator
+            <div class="techniques">OscillatorNode, GainNode</div>
+          </li>
+        </ul>
+      </div>
+      <div>
         <h1>audio processing</h1>
         <p></p>
         <ul class="nobullets">
