io/pointer/remote and refactoring

--- a/data/index.html
+++ b/data/index.html
@@ -27,8 +27,8 @@
             <div class="techniques">Forms, frequency</div>
           </li>
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/scale"></a>
-            <a href="../io/pointer/scale/">/io/pointer/scale</a>: pinch-to-zoom gesture
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/pointer/scale"></a>
+            <a href="../pointer/scale/">/pointer/scale</a>: pinch-to-zoom gesture
             <div class="techniques">Points tracker, pointer events, gesture</div>
           </li>
         </ul>
