--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li> / <a href="./geometry/">geometry</a></li>
           <li> / <a href="./io/">input output</a></li>
           <li> / <a href="./modulation/">modulation</a></li>
+          <li> / <a href="./pointer/">pointer</a></li>
           <li> / <a href="./flow/">flow</a></li>
         </ul>
       </div>
