--- a/io/index.html
+++ b/io/index.html
@@ -23,6 +23,9 @@
       <p>
         <a class="pill" href=" https://clinth.github.io/ixfx/modules/Io.html">API Reference</a>
       </p>
+      <p>
+        See also: <a href="../pointer/">pointers: touch, trackpad, mouse & stylus</a>
+      </p>
     </section>
     <div class="demos">
       <div>
@@ -85,46 +88,7 @@
         </ul>
 
       </div>
-      <div>
-        <h1>pointer</h1>
-        <ul class="nobullets">
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/scale"></a>
-            <a href="./pointer/scale/">scale</a>: pinch-to-zoom gesture
-            <div class="techniques">Points tracker</div>
-          </li>
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/speed"></a>
-            <a href="./pointer/speed/">speed</a>: calculate pointer speed in x & y
-            <div class="techniques">moving average, normalising, variable fonts</div>
-          </li>
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/force/"></a>
-            <a href="./pointer/force/">force</a>: Trackpad/stylus pressure
-          </li>
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/visualise/"></a>
-            <a href="./pointer/visualise/">visualiser</a>: for debug purposes, show pointer movements
-          </li>
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/move/"></a>
-            <a href="./pointer/move/">move</a>: Based on the 'thing' model, a shape grows with pointer movement, and
-            otherwise shrinks on its own accord.
-          </li>
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/drag/"></a>
-            <a href="./pointer/drag/">drag</a>: Based on the 'thing' model, elements are draggable, and build up an
-            'agitation' the more they are moved.
-          </li>
-        </ul>
-        <h2>playgrounds</h2>
-        <ul class="nobullets">
-          <li><a href="../playgrounds/io/pointer/">pointer</a>: Pointer events</li>
-          <li><a href="../playgrounds/io/pointer-gesture/">gesture</a>: Touch gestures</li>
-          <li><a href="../playgrounds/io/pointer-pen/">pointer-pen</a>: Pen pointer events</li>
-          <li><a href="../playgrounds/io/force/">force</a>: Trackpad/stylus pressure</li>
-        </ul>
-      </div>
+
       <div>
         <h1>keyboard</h1>
         <ul class="nobullets">
