--- a/playgrounds/index.html
+++ b/playgrounds/index.html
@@ -30,29 +30,32 @@
         <h2>modulation</h2>
         <ul class="nobullets">
           <li>
-            <a href="./modulation/plot/">plot</a>: plot values
+            <a href="https://clinth.github.io/fn-vis/">fn-vis</a>: visualise the output of a function
           </li>
         </ul>
+
+        <h2>pointer</h2>
+        <ul class="nobullets">
+          <li>
+            <a href="./pointer/index.html">pointer</a>: Pointer events
+          </li>
+          <li>
+            <a href="./pointer/pen/">pen</a>: Pen pointer events (stylus input required)
+          </li>
+          <li>
+            <a href="./pointer/gesture/">gesture</a>: Touch gestures (touch input required)
+          </li>
+          <li>
+            <a href="./pointer/force/">force</a>: Force/pressure data from Apple trackpads (when using Safari) or stylus
+          </li>
+        </ul>
+
         <h2>io</h2>
         <ul class="nobullets">
           <li>
             <a href="./io/keys/">keys</a>: Key events
           </li>
-          <li>
-            <a href="./io/point-tracker/">keys</a>: Key events
-          </li>
-          <li>
-            <a href="./io/pointer/">pointer</a>: Pointer events
-          </li>
-          <li>
-            <a href="./io/pointer-pen/">pointer-pen</a>: Pen pointer events (stylus input required)
-          </li>
-          <li>
-            <a href="./io/pointer-gesture/">pointer-gesture</a>: Touch gestures (touch input required)
-          </li>
-          <li>
-            <a href="./io/force/">force</a>: Force/pressure data from Apple trackpads (when using Safari) or stylus
-          </li>
+
           <li>
             <a href="./io/espruino-repl/">espruino-repl</a>: Run lines of code on an Espruino
           </li>
