Fixed touch events for drag, move and speed

--- a/pointer/speed/index.html
+++ b/pointer/speed/index.html
@@ -39,6 +39,7 @@
       flex-direction: column;
       user-select: none;
       -webkit-user-select: none;
+      touch-action: none;
     }
 
     #speed {
