--- a/pointer/drag/index.html
+++ b/pointer/drag/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <title>drag</title>
 </head>
 
@@ -29,6 +29,7 @@
       color: var(--fg);
       font-family: var(--font);
       overflow: hidden;
+      touch-action: none;
     }
 
     .thing {
