--- a/pointer/move/index.html
+++ b/pointer/move/index.html
@@ -29,6 +29,7 @@
       color: var(--fg);
       font-family: var(--font);
       overflow: hidden;
+      touch-action: none;
     }
 
     #thing {
