--- a/pointer/index.html
+++ b/pointer/index.html
@@ -48,6 +48,10 @@
             <a href="./drag/">drag</a>: Based on the 'thing' model, elements are draggable, and build up an
             'agitation' the more they are moved.
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/pointer/remote/"></a>
+            <a href="./remote/">remote</a>: Demonstrates sending/receiving pointer data between sketches.
+          </li>
         </ul>
         <h2>playgrounds</h2>
         <ul class="nobullets">
