--- a/pointer/index.html
+++ b/pointer/index.html
@@ -44,6 +44,11 @@
             otherwise shrinks on its own accord.
           </li>
           <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/pointer/infinite/"></a>
+            <a href="./infinite/">infinite</a>: An extension of the 'move' sketch, but uses the Pointer Lock API for
+            infinite pointer movement.
+          </li>
+          <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/pointer/drag/"></a>
             <a href="./drag/">drag</a>: Based on the 'thing' model, elements are draggable, and build up an
             'agitation' the more they are moved.
