--- a/flow/index.html
+++ b/flow/index.html
@@ -44,8 +44,13 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-starter"></a>
-            <a href="./statemachine-starter/">statemachine-starter</a>
+            <a href="./statemachine-starter/">starter</a>: Lightweight sketch to get started with state machines
             <div class="techniques">State machine</div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-regions"></a>
+            <a href="./statemachine-regions/">regions</a>: Uses a 'driver' to change state based on certain conditions.
+            <div class="techniques">State machine driver</div>
           </li>
         </ul>
       </div>
