Update point-centroid-hull, point-math, point-relation

--- a/geometry/point-math/index.html
+++ b/geometry/point-math/index.html
@@ -24,6 +24,8 @@
       background-color: var(--bg);
       overflow: hidden;
       color: var(--fg);
+      user-select: none;
+      -webkit-user-select: none;
     }
 
     #thing {
