--- a/pointer/remote/receiver.html
+++ b/pointer/remote/receiver.html
@@ -41,6 +41,7 @@
     Shows messages sent by the sender seketch
   </p>
   <div id="remote-status"></div>
+  <div id="remote-data"></div>
   <script type="module" src="receiver.js"></script>
 </body>
 
