pointer/next-point demo
'predicts' the next point based on average movement vector

--- a/pointer/index.html
+++ b/pointer/index.html
@@ -107,6 +107,11 @@
             <a href="../geometry/#point">geometry</a>/<a href="../geometry/point-particle/">particle</a>
             <div class="techniques">Canvas, animating points, repeat, jitter</div>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/pointer/next-point"></a>
+            <a href="../pointer/next-point/">next point</a>: Attempts to predict the next pointer move
+            <div class="techniques">Point tracker, vectors</div>
+          </li>
         </ul>
       </div>
       <div>
